--- a/frontend/week1/website/style.css
+++ b/frontend/week1/website/style.css
@@ -175,9 +175,9 @@ font-family: Cambay;
 font-weight: 700;
 }
 .sec2{
-width: 1440px;
+width: 100%;
 height: auto;
-margin-left: 200px;
+margin-left: 17%;
 padding-top: 150 px;
 }
 
